[package]
name = "tfidf_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
lazy_static = "1.4.0"


[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
